[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/IM_Fell_English/IMFellEnglish-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/proximity_message.gd" type="Script" id=2]
[ext_resource path="res://scene/DepthController.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[node name="ProximityMessage" type="Area2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 0 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "sample text"
align = 1
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="DepthController" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_ProximityMessage_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ProximityMessage_body_exited"]
